Fixed image location

--- a/labs/home-lab-network/2.md
+++ b/labs/home-lab-network/2.md
@@ -4,7 +4,7 @@ The first DevNet Learning Lab in this Module discusses some points to consider a
 
 This Learning Lab in that same Module focuses on what may likely be your biggest barrier to deciding to add APIC-EM to your home lab: the cost of the server hardware on which to run APIC-EM. This Learning Lab begins with the assumption that you are at least considering whether to add APIC-EM to your home lab, including the fact that you have some budget set aside. What server hardware should you buy? What specifications? What could you choose to save some money? This Learning Lab works through some of those questions. 
 
-![alt text](images/apic-21.png ) 
+![alt text](assets/images/apic-21.png ) 
  
 This Learning Lab breaks down the APIC-EM hardware requirements. It then shows a series of hardware options, some of which may not meet all the hardware requirements, for the sake of finding a lower price point for your APIC-EM server. Along the way, we ask you to take a few minutes and begin your own research, just to see what servers you might with current prices in your part of the world.
 
@@ -37,7 +37,7 @@ As wonderful as those DevNet and other learning tools are, the deeper you go, th
 - APIC-EM apps: The flexibility gained by controlling all parts of the network can enable more experimentation and learning with some of the APIC-EM apps
 - APIC-EM Installation/Planning: If your goal is to learn about the install process, and some of the options, having your own server on which to install APIC-EM is a big help.
 
-![alt text](images/apic-22.png ) 
+![alt text](assets/images/apic-22.png ) 
  
 From here forward, the rest of this Learning Lab assumes you are pursuing adding APIC-EM to your home lab – let’s go find some hardware on which to run APIC-EM!
 
@@ -48,7 +48,7 @@ For most of us, the cost of the server will be the biggest barrier to overcome b
 ### Three Environments on which to Run the APIC-EM System
 APIC-EM software downloads as an ISO that can be installed natively on a server (that is, bare metal), as a virtual machine, or as an appliance. If a virtual machine, the APIC-EM documents list a single supported hypervisor: VMWare ESXi. Cisco also offers an appliance option, in which you purchase the appliance from Cisco; what you receive is a Cisco UCS server with the APIC-EM product already installed on the server.
 
-![alt text](images/apic-23.png ) 
+![alt text](assets/images/apic-23.png ) 
  
 For the bare-metal option, Cisco lists the approved server hardware choices. The hardware compatibility list includes a [short list of Cisco C-series UCS servers](http://www.cisco.com/c/en/us/td/docs/cloud-systems-management/application-policy-infrastructure-controller-enterprise-module/1-4-x/install_1-4-1-x/b_apic_em_install_guide_v_1-4-1-x/b_apic_em_install_guide_v_1-4-1-x_chapter_011.html) (that is, rack mount servers). 
 
@@ -57,7 +57,7 @@ For the appliance, you buy the appliance, for which the hardware unsurprisingly 
 ### Server Hardware Requirements for APIC-EM
 If you use bare-metal or a VM, you need to choose how much of each server resource to reserve for the APIC-EM system or VM. The next figure summarizes the key requirements (per the APIC-EM 1.4.1.x installation documents): 
 
-![alt text](images/apic-24.png ) 
+![alt text](assets/images/apic-24.png ) 
  
 To make the comparisons more direct and more obvious, the next few pages focus on the bare-metal installation, assuming the requirements as shown in the figure.
 
@@ -111,7 +111,7 @@ LINK TBD
 - RAM: 32 G RAM
 - Disk: A 300 GB hard disk drive (HDD) with approximately 1200 MBs transfer rate. (If I were buying for my own lab, I’d buy disk with more capacity. Note that the server plenty of drive bays for later expansion.)
 	
-![alt text](images/apic-25.png ) 
+![alt text](assets/images/apic-25.png ) 
  
 Although a popular enterprise product line, the list price of just under $10,000 of this example would probably drive away most of us thinking of using this server for a home APIC-EM installation. Even at a 30-40% discount, the price would still be too much for the average person to spend for a server to use in a home lab. However, if you’re willing to try hardware that’s not on the approved list, and maybe even hardware that does not meet all the listed requirements, you can get the price down quite a bit – so read on.
 
@@ -121,7 +121,7 @@ This next page makes a pair of useful comparisons to the supported UCS hardware 
 ### Repeating the APIC-EM Requirements
 To begin the comparisons, this page starts again with the same APIC-EM hardware requirements discussed for UCS servers. The only requirement removed for this first white-box configuration comparison is that the server itself no longer has to be a UCS server. The figure repeats the key requirements:
 
-![alt text](images/apic-26.png ) 
+![alt text](assets/images/apic-26.png ) 
 
 
 The process to find the examples for this page was straightforward. We just searched the Internet for phrases like: 
@@ -134,7 +134,7 @@ Then we looked for sites that made it easy to configure servers and compare diff
 ### Example White-Box Configuration 1: Meets Requirements
 This first example configuration attempts to meet APIC-EM requirements, but just barely meet the requirements to save the most money as possible. This first example priced out at $1950 US; the pricing was run in May 2017, and did not include taxes or shipping. The following table lists the APIC-EM requirements again, with the specifications for the priced system:
 
-![alt text](images/apic-27.png ) 
+![alt text](assets/images/apic-27.png ) 
 
 
 Beyond the details in the figure, here are a few other comments about this example system: 
@@ -167,7 +167,7 @@ Intel releases versions of their processors over time, with the later versions b
 
 As you might expect, the v4 processor has a better performance benchmark than the earlier v3 processor of the same series – but without the 2.4 GHz base clock rate. If you open web pages for the links for each processor, you will see a page like the one shown in the next image. Then look for the “benchmarks” item, and you can see Intel’s performance data on each processor.
 
-![alt text](images/apic-28.png ) 
+![alt text](assets/images/apic-28.png ) 
 
   
 If you want to do a little research on the processors, this link is a great place to look to [compare Intel processors](https://ark.intel.com/Search/FeatureFilter?productType=processors). For servers that would be in the range of what you’d use for APIC-EM, or for a more general network programmability server platform, when searching, consider filtering your search for the 6-12 core range, and probably ignore processors that didn’t support virtualization (aka that did not support multiple threads per CPU).
@@ -183,7 +183,7 @@ For RAM, again, stick with 32G as your minimum.
 ### Example White-Box Configuration 2: Slower Base Clock Rate
 This second example configuration on the page takes those same requirements from the previous white-box rack-mount server, and removes the clock speed requirement. This example priced out at about $1700 US: $250 less than the previous example. The pricing was run during the same day as the previous pricing exercise, and did not include taxes or shipping. The following table lists the APIC-EM requirements again, with the specifications for the priced system:
 
-![alt text](images/apic-29.png ) 
+![alt text](assets/images/apic-29.png ) 
 
 
 The following table summarizes the APIC-EM requirements again, and puts the two custom rack-mount servers side-by-side for easier comparison. Note that both examples used the same RAM and Disk parts, with the only difference being the processor used. 
@@ -266,7 +266,7 @@ Finding the right NUC for your APIC-EM needs can take a little searching, althou
 
 When looking for a good NUC for APIC-EM, you want to look for kits with the better CPUs – but your search may be easier if you begin by searching on the 32G RAM requirement (see next figure). The Intel NUC web page does not allow easy filtering on the number of cores in the processor, for instance, but it does filter on RAM supported – and at least today, most NUCs do not support 32G of RAM. A quick way to narrow the field to list only the most capable NUCs is to search on RAM, as highlighted below.
 
-![alt text](images/apic-30.png ) 
+![alt text](assets/images/apic-30.png ) 
  
 The [Intel NUC “Skull Canyon” (NUC6I7KYK)](http://www.intel.com/content/www/us/en/products/boards-kits/nuc/kits/nuc6i7kyk.html) may be the best fit for APIC-EM as of the release of this Learning Lab. It supports 32G, and comes with the [6th generation Intel Core I7-6770 ](http://ark.intel.com/products/93341/Intel-Core-i7-6770HQ-Processor-6M-Cache-up-to-3_50-GHz)      processor. The processor has 4 cores/8 threads with a base clock rate of 2.6 GHz. 
 
@@ -275,14 +275,14 @@ Of course, the biggest downside is that it does not meet the stated requirement 
 ### LAN Options for the Intel NUC
 One other consideration for the NUC has to do with LAN interfaces. The kits have a mix of LAN interfaces, some wireless, some wired. However, to get APIC-EM working, you can make APIC-EM work using only the single 10/100/1000 Ethernet NIC that comes with many Intel NUC Kits. Then you can just connect the APIC-EM NUC to your home lab subnet, and connect through a spare router to the lab network, as shown in this figure.
 
-![alt text](images/apic-31.png ) 
+![alt text](assets/images/apic-31.png ) 
  
 Note that the NUC does have several options for additional LAN NICs. Many come with Wireless LAN NICs. The NUCs some with several USB 2.0, 3.0, 3.1, and even an Apple Thunderbolt interface, all of which can be used to add Ethernet interfaces. However, know that in the testing of APIC-EM on an Intel NUC when writing this Learning Lab, getting those additional Ethernet interfaces to work with APIC-EM required a fair amount of effort; they did not work immediately, and were not recognized by the APIC-EM installation process. If you know you want to use two or more LAN interfaces on your APIC-EM server, know that using a NUC will require some extra time to discover the details beyond what we were able to make work.
 
 ### Example Intel NUC Configuration: NUC Skull Canyon (NUC6i7KYK) Kit
 With the Intel NUC Skull Canyon kit, plus well-chosen RAM and SSD, you can get a system that meets all the APIC-EM requirements except the 6-core requirement and the RAID disk requirement. This model of NUC does not support Hard Disk Drives (HDDs), rather supporting only the much smaller Solid State Drive (SSD), which are generally a little more expensive per byte). Even so, in the pricing exercise we did for this Learning Lab, adding 32 GB of RAM and a 250G SSD drive put the actual price at about $900 (without shipping and tax). 
 
-![alt text](images/apic-32.png ) 
+![alt text](assets/images/apic-32.png ) 
    
 Beyond the details in the table, here are a few other comments about this example system: 
 
@@ -349,7 +349,7 @@ To build the system, you must buy the main components and build it. The major pu
 
 For the shopping list built for this Learning Lab, after adding all those parts, the system had the specifications shown in the next figure.
 
-![alt text](images/apic-33.png ) 
+![alt text](assets/images/apic-33.png ) 
   
 For comparison, we built a shopping list for a similar system, but with a motherboard that worked with an [Intel I7-6800K](https://ark.intel.com/products/94188/Intel-Core-i7-6850K-Processor-15M-Cache-up-to-3_80-GHz).  The processor has a base clock rate of 3.6 GHz, 6 cores, and 12 threads. The shopping list used the same RAM and disk as the AMD build-your-own example. The table below lists the parts and prices, with the total, for easier comparison.
 
