--- a/labs/home-lab-network/1.md
+++ b/labs/home-lab-network/1.md
@@ -23,7 +23,7 @@ What should an engineer do in their home lab to make it a good learning environm
 
 The DevNet Learning Labs in this DevNet Learning Track examine this question. This Learning Track will have multiple Learning Modules, each with multiple Learning Labs. This Learning Lab examines three related topics, as shown in the left side of the figure:
 
-![alt text](assets/images/apic-1.png)
+![alt text](/posts/files/home-lab-network/assets/images/apic-1.png)
  
 
 Why APIC-EM to begin this DevNet Learning Track? APIC-EM is a useful tool unto itself, but also it is particularly useful for learning about network programmability and APIs. Additionally, it works with the networking devices that many networkers are familiar with, which makes it a natural fit into a traditional networker’s skill set. Beyond that, you have some work to do before choosing whether to even bother to add APIC-EM to your home lab. If you then choose to install it, you have some analysis, planning, and budgeting to do. This module of Learning Labs looks at some of these issues. 
@@ -51,14 +51,14 @@ So, the first step in thinking about adding APIC-EM to your home lab is to think
 ### Network Programmability Learning Track
 DevNet organizes many of the Learning Labs into learning tracks. Each Learning Track groups related Learning Labs, and orders them in a useful sequence. 
 
-![alt text](assets/images/apic-2.png)
+![alt text](/posts/files/home-lab-network/assets/images/apic-2.png)
  
 For instance, the Network Programmability Learning Track has several APIC-EM labs. To see the various Learning Tracks:
 1.	Browse to Developer.cisco.com
 2.	Choose the top menu item “Discover”, and choose “Learning Tracks”
 That process should navigate your browser to a page similar to the one shown in the next figure, from which you could select the Network Programmability Learning Track.
 
-![alt text](assets/images/apic-3.png)
+![alt text](/posts/files/home-lab-network/assets/images/apic-3.png)
  
 ### All APIC-EM Labs
 You can also navigate to any DevNet Learning Lab directly, ignoring the Learning Tracks. For instance, to find labs tagged as having some APIC-EM content, you can:
@@ -67,7 +67,7 @@ a.	Type “APIC-EM” in the search box in the upper right
 b.	Click category “APIC-EM” on the left
 The next figure points out the locations.
 
-![alt text](assets/images/apic-4.png)
+![alt text](/posts/files/home-lab-network/assets/images/apic-4.png)
  
 ### What You Get with Existing DevNet Learning Labs about APIC-EM
 Each of these DevNet Learning Labs gives you a sequence of scripted steps to help you learn something useful, typically in around 20 minutes. Think of them like lab exercises in a class, but also with enough material from the course (words and figures) to go along with the lab activities so that you can do the lab by yourself without any help. 
@@ -78,14 +78,14 @@ Some of the strengths of the Learning Labs are:
 - Interact from Your Own PC: Many Learning Labs will have you install some tools on your own home computer (which is great for learning)
 - Uses DevNet Sandbox Labs: Note that Learning Labs – that is, the lab exercises often use DevNet Sandbox Labs – that is, pods of real/virtual/simulated network device instances – as the lab network on which to perform the lab exercise. (More on DevNet Sandbox Labs coming next!)
 
-![alt text](assets/images/apic-5.png)
+![alt text](/posts/files/home-lab-network/assets/images/apic-5.png)
 
 ## Learning Programmability and APIC-EM with Existing DevNet Sandboxes
 After learning some of the basics in some Learning Labs, most of us then want to go beyond scripted learning: we need a place to have more free play to experiment with different features and functions. DevNet Sandboxes provide just that.
 
 DevNet Sandboxes are lab pods, with both real and virtual instances of various devices, available to anyone can learn and perform experiments. All you need to do is access the Sandbox, first from your web browser, and then sometimes with other tools. The Always-On Sandboxes allow immediate access, whereas Reservation Sandboxes require prior scheduling, particularly those Sandboxes that include real and virtual device instances. 
 
-![alt text](assets/images/apic-6.png)
+![alt text](/posts/files/home-lab-network/assets/images/apic-6.png)
  
 The learning sequence of starting with DevNet Learning Labs, followed by using DevNet Sandboxes, makes perfect sense. You follow the scripted Learning Labs until you feel more comfortable. Then, find a DevNet Sandbox with the related hardware and software, and try your own learning experiments.
 
@@ -101,7 +101,7 @@ You can see details about each of the Sandboxes, even without reserving them, at
 
 The next figure shows the topology for this Sandbox, with each rectangle with a circle inside representing some device.
 
-![alt text](assets/images/apic-7.png)
+![alt text](/posts/files/home-lab-network/assets/images/apic-7.png)
 
 To navigate to the DevNet APIC-EM Sandboxes, you can start at developer.cisco.com, navigate to the Sandbox area, and look for networking Sandboxes. To get there directly and more quickly:
 https://devnetsandbox.cisco.com
@@ -111,7 +111,7 @@ Once logged in at the page for devnetsandbox.cisco.com, you should see a screen 
 - Search for APIC-EM
 - Click the Networking category
 
-![alt text](assets/images/apic-8.png)
+![alt text](/posts/files/home-lab-network/assets/images/apic-8.png)
  
  
 ## Other APIC-EM Learning Options
@@ -139,14 +139,14 @@ Objectively, how much have you personally learned so far with all these free lea
 ### Check Your Progress on One of Two DevNet Learning Tracks
 One easy and useful place to check is to check your progress on one of two overlapping DevNet Learning Tracks. Each Learning Track lists a series of Learning Labs that make sense to do in that sequence. In some cases, a Learning Lab might be useful inside multiple Learning Tracks, so the Learning Tracks overlap. Some of the best foundational APIC-EM programmability labs happen to be part of two overlapping DevNet Learning Tracks, as shown in this figure.
 
-![alt text](assets/images/apic-9.png)
+![alt text](/posts/files/home-lab-network/assets/images/apic-9.png)
  
 Your job: assess your progress through one or the other of these two DevNet Learning Tracks. To do so, first open the page for a learning track. Then look at the status information on the page, as highlighted with the arrowed lines in the following figure. The highlighted items show information that tells you whether you have never started, started but not finished, or finished a Learning Lab, and when you last used the Learning Llab if you’ve started it.
 
 - The [Network Programmability Learning Track](https://learninglabs.cisco.com/tracks/netprog-eng)    
 - The [APIC-EM Programmability Learning Track](https://learninglabs.cisco.com/tracks/devnet-beginner)    
 
-![alt text](assets/images/apic-10.png)
+![alt text](/posts/files/home-lab-network/assets/images/apic-10.png)
  
 Once you see the information on the page, wherever you keep your notes about what you are learning for network programmability, make notes as shown in this table. Then make a to-do in your planner on when to come back and do the Learning Labs.
 
@@ -185,7 +185,7 @@ With your own home lab, you get complete control of what network devices to use,
 In your own lab, your own APIC-EM instance and your own network devices should be available any time you want to use them. DevNet Sandboxes do not always meet that standard. Always-on Sandboxes are of course meant to be available, but those backed by real/virtual network devices require a reservation with setup time. That may mean the lab isn’t available when you want to use it. Also, there is usually some time (estimated 30 minutes) of time for the lab automation to bring up and configure the real and virtual devices in a Sandbox, so there is some time lag there as well. 
 With you own home lab, you should be able to boot your APIC-EM instance with your own lab gear anytime you like, and be up and working from a powered off state usually in about 10 minutes.
 
-![alt text](assets/images/apic-11.png)
+![alt text](/posts/files/home-lab-network/assets/images/apic-11.png)
  
 ### Learning More Depth about Specific APIC-EM Apps
 Control over the network topology and configuration means that you have more control over what each APIC-EM app is operating against. To get deeper with some apps, you will likely want more control over the network, to fine tune your experiments and to discover what the apps are doing. 
@@ -213,12 +213,12 @@ You can get to the download page by:
 
 The next figure shows a copy of an APIC-EM download. Of note, the user had clicked for version 1.4 on the left, which revealed the list of downloadable images on the right. The user was hovering over one image, causing a pop-up window to give more detail. Of course, clicking the download button on the right initiates the download.
 
-![alt text](assets/images/apic-12.png)
+![alt text](/posts/files/home-lab-network/assets/images/apic-12.png)
   
 ###  APIC-EM Apps and Licenses
 The APIC-EM ISO, to date, includes most of the apps. That is, you download the ISO, install from the ISO, and most all the apps are installed as part of the process. These included apps, called Basic Apps in Cisco’s licensing documents, are licensed and require no action on your part. The figure shows the Basic Apps available as part of the APIC-EM 1.4.x releases:
 
-![alt text](assets/images/apic-13.png)
+![alt text](/posts/files/home-lab-network/assets/images/apic-13.png)
 
 ### A Brief Word on the IWAN App
 For licensing purposes, Cisco categorizes APIC-EM apps as: 
@@ -266,13 +266,13 @@ What does that mean for us when thinking about our networking gear and whether i
 
 As a result, the devices and software levels listed in the compatibility lists do not include some of the older of the cheaper home lab device options. The figure shows a few of the more common options for enterprise router and switch families.
 
-![alt text](assets/images/apic-14.png)
+![alt text](/posts/files/home-lab-network/assets/images/apic-14.png)
   
 ### Where to Begin Your Own Lab Analysis: Network Visibility Compatibility List
 To get started, go ahead and open another browser tab to look at [this document](http://www.cisco.com/c/en/us/td/docs/cloud-systems-management/application-policy-infrastructure-controller-enterprise-module/1-4-x/network_visibility/supported-platforms/b_netvis_supported_devices_1-4-x.html#concept_t2v_zff_5y). Search for the section that lists long tables of compatible hardware, just a few pages into the document.
 That document details compatibility information about the APIC-EM app called the “Cisco Network Visibility Application”. This app can be a little difficult to find sometimes, because it does not show up as a separate single app in the APIC-EM GUI. In fact, none of the icons in the APIC-EM GUI go by that name. That app name references a few of APIC-EM’s core features, particularly the Discovery and Topology apps, as shown in the figure.
 
-![alt text](assets/images/apic-15.png)
+![alt text](/posts/files/home-lab-network/assets/images/apic-15.png)
 
 
 The compatibility list for the Network Visibility App serves as the best baseline list for device compatibility with APIC-EM. Why? Many of the features of APIC-EM apps rely on the topology information discovered by the discovery function, as stored in APIC-EM’s Network Information Database. APIC-EM uses the database as the basis for displaying the topology, as well as for knowing what devices it might operate against for some other apps, like EasyQoS. 
@@ -306,7 +306,7 @@ In some ways, APIC-EM is an application, but in others, it is a platform for app
 
 The main point is that each app may (and often does) have its own list of compatible hardware and software. In some cases, the lists are close to the list for the Network Visibility app’s compatibility list, while in other cases the subset is much smaller. The lists are subsets of the lists seen for the Network Visibility app, as depicted in this figure.
 
-![alt text](assets/images/apic-16.png)
+![alt text](/posts/files/home-lab-network/assets/images/apic-16.png)
    
 This page works through some of the reasons.
 
