Wendell - first test of Git lab update
Wendell is testing the update process before making big changes.
Added 1 line text (search ‘zzz’) to 1.md
Re-sized apic-5.png and apic-6.png

--- a/labs/home-lab-network/1.md
+++ b/labs/home-lab-network/1.md
@@ -18,6 +18,8 @@ To perform this DevNet Learning Lab, you need only yourself and a web browser wi
 ### Your Home Lab, APIC-EM, and Network Programmability
 Networkers have been building their own home labs for many years, typically for building their skills, or for getting ready for certification tests. You will hear of people borrowing gear from work to bring home, or buying older (cheaper) used gear to build their home labs. Those labs often have some routers and switches, plus the devices and software related to whatever technology that person might be studying.
 
+This is a test of the Edit process by Wendell the lab author. zzzzzzzzzzzzzzzz
+
 Now take that a step further into the world of network programmability with Cisco products:
 What should an engineer do in their home lab to make it a good learning environment for learning about network programmability? 
 
