Comprehensive review of first 2 labs from Wendell (by Wendell)
I checked: headings, links, figure sizes, tables, and lists for
correctness and formatting. I fixed any other issues I came across
while editing. Emailing Paul with a few odds and ends.

--- a/labs/add-apic-home/9.md
+++ b/labs/add-apic-home/9.md
@@ -5,7 +5,7 @@ In some ways, APIC-EM is an application, but in others, it is a platform for app
 The main point is that each app may (and often does) have its own list of compatible hardware and software. In some cases, the lists are close to the list for the Network Visibility app’s compatibility list, while in other cases the subset is much smaller. The lists are subsets of the lists seen for the Network Visibility app, as depicted in this figure.
 
 ![alt text](/posts/files/home-lab-network/assets/images/apic-16.png)
-   
+
 This page works through some of the reasons.
 
 ##  Path Trace Application
@@ -14,19 +14,19 @@ The Path Trace Application allows the user to supply a source and destination, w
 
 The app has its own list of compatible hardware and software. First, this app relies on the Network Information Database as discovered by the APIC-EM Network Visibility Application. Then, it examines the forwarding tables of the actual devices in the network, predicting what entries would be matched by those tables.
 
-As it turns out, this app’s list of compatible devices closely matches the list of devices supported by the Network Visibility Application. Many of the same devices are listed, but with more recent OS versions. Check this [link ](http://www.cisco.com/c/en/us/td/docs/cloud-systems-management/application-policy-infrastructure-controller-enterprise-module/1-4-x/path_trace/supported-platforms/b_path_Supported_Platforms_1_4_0_x.html) 
+As it turns out, this app’s list of compatible devices closely matches the list of devices supported by the Network Visibility Application. Many of the same devices are listed, but with more recent OS versions. Check this [link ](http://www.cisco.com/c/en/us/td/docs/cloud-systems-management/application-policy-infrastructure-controller-enterprise-module/1-4-x/path_trace/supported-platforms/b_path_Supported_Platforms_1_4_0_x.html)
 to find the compatibility list for this app, as of the time this Learning Lab was posted.
 
 ##  EasyQoS App
 
-The EasyQoS application, like the Path Trace application, has its own separate compatibility list. The list is again a close replica of the list for the Network Visibility application, with different details. 
+The EasyQoS application, like the Path Trace application, has its own separate compatibility list. The list is again a close replica of the list for the Network Visibility application, with different details.
 The app deploys QoS configurations to devices, based on Cisco’s best practices per Cisco’s QoS Design Guides. As a result, the QoS app omits a few devices (for example, ASA firewalls) found in the compatibility lists for the Path Trace and Network Visibility apps. It also lists some extra details – for instance, while few of you will likely have Cisco 6500 or 6800 switches in your home lab, note that the compatibility document does detail support by line card in those switches, because QoS features can differ in different line cards.
 
 Check out the [compatibility guide for the APIC-EM EasyQoS app](http://www.cisco.com/c/en/us/td/docs/cloud-systems-management/application-policy-infrastructure-controller-enterprise-module/1-4-x/easyqos/supported-platforms/b_EasyQoS_Supported_Devices_1_4_0_x.html#concept_t2v_zff_5y) for more specifics.   
 
 
 ## Intelligent WAN (IWAN) App
-Intelligent WAN, or [IWAN](http://www.cisco.com/go/iwan ), creates a Software-Defined WAN (SD-WAN) solution. It uses several Cisco product features, which makes the configuration a bit challenging at times. The IWAN app helps solve that problem by helping you configure IWAN features by using a series of configuration panels from the IWAN app GUI. 
+Intelligent WAN, or [IWAN](http://www.cisco.com/go/iwan ), creates a Software-Defined WAN (SD-WAN) solution. It uses several Cisco product features, which makes the configuration a bit challenging at times. The IWAN app helps solve that problem by helping you configure IWAN features by using a series of configuration panels from the IWAN app GUI.
 
 The list of supported devices for the IWAN app is more a statement of what platforms and OS versions support the IWAN features. For instance, the following documents include the list of compatible devices for IWAN 2.2 and then for the APIC-EM IWAN app (V1.4.x). If you put them side-by-side, you’ll see that the supported device list for the IWAN feature is the same list as the supported devices for the APIC-EM IWAN app.
 
@@ -51,11 +51,11 @@ For this exercise, you will again probably do some work, and then come back to r
 - Find the compatibility list for each of the apps you care about
 - Work through each of the devices in your lab, and determine if it is in the compatibility list, or if with an upgrade, it could meet the requirements of the compatibility list.
 
+![alt text](/posts/files/home-lab-network/assets/images/apic-table-3.png)
+
 | Lab Device Name | Lab Device Model | Network Visibility App  | Path Trace App | Your App Here… | Your App Here… |
 | --- | --- | --- | --- | --- | --- |
 |   |   |   |   |   |   |
 |   |   |   |   |   |   |
 |   |   |   |   |   |   |
 |   |   |   |   |   |   |
-			
-
