--- a/labs/add-apic-home/4.md
+++ b/labs/add-apic-home/4.md
@@ -1,4 +1,4 @@
- 
+
 # Other APIC-EM Learning Options
 Before moving on, you should know about two other useful free resources, both described briefly on this page.
 
@@ -11,10 +11,10 @@ As it turns out, there were not any demos specific to APIC-EM at the time this L
 ## Blogs, Communities, and Other Options
 You will probably want to track and use a few other resources as well. In particular, Cisco’s Adam Radford of DevNet frequently presents at DevNet events, Cisco Live, as well as writing blog posts and answering community questions about APIC-EM. If you care to learn a lot about APIC-EM and using its APIs, watch for [Adam’s content](https://communities.cisco.com/people/aradford/content)!  The following list provides some links to help you find Adam’s content as well as several other useful sites:
 
-Adam’s [blog posts](https://communities.cisco.com/community/developer/dna/blog?start=0) are often linked from DevNet’s main APIC-EM page, and all his blogs can be found [here](https://communities.cisco.com/people/aradford/content).
+- Adam’s [blog posts](https://communities.cisco.com/community/developer/dna/blog?start=0) are often linked from DevNet’s main APIC-EM page, and all his blogs can be found [here](https://communities.cisco.com/people/aradford/content).
 
-Search for previous Cisco Live presentations about APIC-EM here at the [Cisco Live On Demand](https://www.ciscolive.com/online/connect/publicDashboard.ww) page.
+- Search for previous Cisco Live presentations about APIC-EM here at the [Cisco Live On Demand](https://www.ciscolive.com/online/connect/publicDashboard.ww) page.
 
-Communities – join in and subscribe to the [Network Programmability study group](https://learningnetwork.cisco.com/groups/network-programmability-study-group) and the [DevNet APIC-EM community](https://communities.cisco.com/community/developer/apic-em). (Check out all [DevNet Communities here](https://developer.cisco.com/site/coi/).)
-Learning at Cisco continues to offer free webinars about many topics, with an entire series about SDN and network programmability – [check out the recorded sessions](https://learningnetwork.cisco.com/community/learning_center/sdn_recorded_seminars).   
+- Communities – join in and subscribe to the [Network Programmability study group](https://learningnetwork.cisco.com/groups/network-programmability-study-group) and the [DevNet APIC-EM community](https://communities.cisco.com/community/developer/apic-em). (Check out all [DevNet Communities here](https://developer.cisco.com/site/coi/).)
 
+- Learning at Cisco continues to offer free webinars about many topics, with an entire series about SDN and network programmability – [check out the recorded sessions](https://learningnetwork.cisco.com/community/learning_center/sdn_recorded_seminars).   
