--- a/labs/add-apic-home/7.md
+++ b/labs/add-apic-home/7.md
@@ -1,13 +1,13 @@
 
 # Software: APIC-EM in Your Home Lab
-The best news about adding APIC-EM to your home lab is that you can download APIC-EM for free, fully licensed. This page walks through the basics, but literally, you could be downloading all the software you need with about five minutes of navigating at Cisco.com. 
+The best news about adding APIC-EM to your home lab is that you can download APIC-EM for free, fully licensed. This page walks through the basics, but literally, you could be downloading all the software you need with about five minutes of navigating at Cisco.com.
 
 ##  Downloading APIC-EM Software
-Cisco delivers APIC-EM software as a disk image – an ISO    https://en.wikipedia.org/wiki/ISO_image   – that you download from Cisco’s support site. As a result, the process is simple: You find the latest release (or the release that you want), click a few times, and wait while the large file downloads.
+Cisco delivers APIC-EM software as a disk image – an [ISO](https://en.wikipedia.org/wiki/ISO_image) – that you download from Cisco’s support site. As a result, the process is simple: You find the latest release (or the release that you want), click a few times, and wait while the large file downloads.
 
 [Download APIC-EM Here](https://developer.cisco.com/fileMedia/download/ff4eb410-6a49-40b7-ba27-ce4685c54254)!  
 
-As for the version to download, the right answer will vary over time. So far, Cisco has released about three new versions of APIC-EM per year. Additionally, some Beta versions of different apps may appear over time as well. So, if unsure of a good version to use, you might try asking in the DevNet APIC-EM forum for recommendations. However, given that you are installing it in a home lab, you can just pick the latest release that is clearly not a Beta version of the code. 
+As for the version to download, the right answer will vary over time. So far, Cisco has released about three new versions of APIC-EM per year. Additionally, some Beta versions of different apps may appear over time as well. So, if unsure of a good version to use, you might try asking in the DevNet APIC-EM forum for recommendations. However, given that you are installing it in a home lab, you can just pick the latest release that is clearly not a Beta version of the code.
 
 You can get to the download page by:
 1.	Navigating to cisco.com from your browser
@@ -17,14 +17,14 @@ You can get to the download page by:
 The next figure shows a copy of an APIC-EM download. Of note, the user had clicked for version 1.4 on the left, which revealed the list of downloadable images on the right. The user was hovering over one image, causing a pop-up window to give more detail. Of course, clicking the download button on the right initiates the download.
 
 ![alt text](/posts/files/home-lab-network/assets/images/apic-12.png)
-  
+
 ##  APIC-EM Apps and Licenses
 The APIC-EM ISO, to date, includes most of the apps. That is, you download the ISO, install from the ISO, and most all the apps are installed as part of the process. These included apps, called Basic Apps in Cisco’s licensing documents, are licensed and require no action on your part. The figure shows the Basic Apps available as part of the APIC-EM 1.4.x releases:
 
 ![alt text](/posts/files/home-lab-network/assets/images/apic-13.png)
 
 ## A Brief Word on the IWAN App
-For licensing purposes, Cisco categorizes APIC-EM apps as: 
+For licensing purposes, Cisco categorizes APIC-EM apps as:
 - Basic Apps
 - Solutions Apps
 
@@ -43,4 +43,4 @@ If you are marching towards APIC-EM installation, you may as well go ahead and d
 - Find the latest generally-available release (or choose your preferred release)
 - Download the ISO file (probably in the 4 GB size range or more)
 - Also download the matching signature file
-- Once downloaded, set these two files aside in a directory where you can find them once you begin the installation process. 
+- Once downloaded, set these two files aside in a directory where you can find them once you begin the installation process.
